<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_register_background"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/txt_loginTitle"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/fredella"
        android:text="@string/login_to_account"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_emailETLogin"
        style="@style/txtDescription.ET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="@+id/et_emailLogin"
        app:layout_constraintTop_toBottomOf="@+id/txt_loginTitle" />

    <EditText
        android:id="@+id/et_emailLogin"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:drawableStart="@drawable/ic_email_24dp"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_emailETLogin" />

    <TextView
        android:id="@+id/txt_passwordETLogin"
        style="@style/txtDescription.ET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="@+id/et_emailLogin"
        app:layout_constraintTop_toBottomOf="@+id/et_emailLogin" />

    <EditText
        android:id="@+id/et_passwordLogin"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:drawableStart="@drawable/ic_lock_24dp"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_passwordETLogin" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/green1"
        android:fontFamily="@font/inter_bold"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="@+id/et_passwordLogin"
        app:layout_constraintStart_toStartOf="@+id/et_passwordLogin"
        app:layout_constraintTop_toBottomOf="@+id/txt_forgotLogin" />

    <TextView
        android:id="@+id/txt_regLoginDesc"
        style="@style/txtDescription"
        android:layout_marginTop="16dp"
        android:text="@string/dont_have_account"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/txt_forgotLogin"
        style="@style/txtDescription"
        android:layout_marginTop="16dp"
        android:text="@string/forgot_password"
        android:textColor="@color/hp_red"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/et_passwordLogin"
        app:layout_constraintTop_toBottomOf="@+id/et_passwordLogin" />

    <TextView
        android:id="@+id/txt_regLogin"
        style="@style/txtDescription"
        android:layout_marginStart="8dp"
        android:text="@string/register"
        android:textColor="@color/blue1"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/txt_regLoginDesc"
        app:layout_constraintTop_toTopOf="@+id/txt_regLoginDesc" />

    <Button
        android:id="@+id/btn_loginGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#4285F4"
        android:drawableLeft="@drawable/common_google_signin_btn_icon_light"
        android:fontFamily="@font/league_spartan_regular"
        android:text="@string/google_signIn"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/txt_regLoginDesc" />

        <RelativeLayout
        android:id="@+id/progressBarLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/loading_blue"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="visible">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>