<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream"
    tools:context=".ui.account.AccountFragment">

    <TextView
        android:id="@+id/txt_genderAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/gender_account"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/txt_ageAccount"
        app:layout_constraintTop_toBottomOf="@+id/txt_ageAccount" />

    <TextView
        android:id="@+id/txt_jobAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/job_account"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/txt_genderAccount"
        app:layout_constraintTop_toBottomOf="@+id/txt_genderAccount" />

    <ImageView
        android:id="@+id/img_profileCr"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="141dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="142dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/blank_profile" />

    <TextView
        android:id="@+id/txt_nameAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/name_account"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_profileCr" />

    <TextView
        android:id="@+id/txt_emailAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/email_account"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/txt_nameAccount"
        app:layout_constraintTop_toBottomOf="@+id/txt_nameAccount" />

    <TextView
        android:id="@+id/txt_ageAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/age_account"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/txt_emailAccount"
        app:layout_constraintTop_toBottomOf="@+id/txt_emailAccount" />

    <RelativeLayout
        android:id="@+id/progressBarLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        tools:visibility="visible"
        android:background="@color/loading_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>